feat(data-access): 为代理绑定等级新增 upsertUserAgentLevel; 补充 Mapper XML_0.15.2
新增能力
AgentMapper: upsertUserAgentLevel(userId, levelId)
XML: ON DUPLICATE KEY UPDATE 写法，维护 assigned_at/effective_date
受影响文件
data-access/src/main/java/com/example/data/mapper/AgentMapper.java
data-access/src/main/resources/mapper/AgentMapper.xml